1316, 1380번 문제 풀이

--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li></ul></div>"
    ]
   },
   {
@@ -219,11 +219,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1316번 - 그룹 단어 체커"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "N = int(sys.stdin.readline())\n",
+    "words = [sys.stdin.readline() for _ in range(N)]\n",
+    "count = 0\n",
+    "# 여러 단어들을 loop\n",
+    "for word in words:\n",
+    "    # 단어 길이가 1개 일 때는 무조건 그룹단어!\n",
+    "    if len(word) == 1:\n",
+    "        count += 1\n",
+    "        break\n",
+    "    chars = [word[0]]\n",
+    "    for i in range(1, len(word)):\n",
+    "        if word[i] not in chars or word[i] == chars[-1]:\n",
+    "            chars.append(word[i])\n",
+    "        else:\n",
+    "            count += 0\n",
+    "            break\n",
+    "    # 만약 마지막 index 까지 다 도달했다면 그룹단어 이므로 +1\n",
+    "        if i == len(word)-1:\n",
+    "            count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1380번 - 귀걸이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case = 0\n",
+    "while True:\n",
+    "    n = int(input())\n",
+    "    if n == 0:\n",
+    "        break\n",
+    "    names = [input() for _ in range(n)]  # 주어진 이름 리스트 담기\n",
+    "    lst = [0] * n  # 주어지는 학생 횟수 셀 리스트 정의\n",
+    "    for _ in range(2*n-1):\n",
+    "        num, char = input().split()\n",
+    "        # 주어진 학생 번호-1 인덱스 위치에 있는 학생 횟수값 +1\n",
+    "        lst[int(num)-1] += 1\n",
+    "    # 학생 횟수값이 2가 아닌 즉, 귀걸이 받지 못하는 학생의 이름 할당\n",
+    "    res = names[[i for i in range(n) if lst[i] != 2][0]]\n",
+    "    case += 1\n",
+    "    print(f\"{case} {res}\")"
+   ]
   }
  ],
  "metadata": {
@@ -243,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
