지금까지 푼 구현문제 다시풀기 완료

--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -327,6 +327,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## zip iterator를 이용해 dict 만들어 해결하기\n",
+    "import sys\n",
+    "N = sys.stdin.readline().strip()\n",
+    "keys = [str(i) for i in range(0, 9)]\n",
+    "values = [0] * 9\n",
+    "\n",
+    "count_dict = dict(zip(keys, values))\n",
+    "for n in N:\n",
+    "    # 9가 나오면 6 나온 것으로 세기\n",
+    "    if n in ['6', '9']:\n",
+    "        count_dict['6'] += 1\n",
+    "    else:\n",
+    "        count_dict[n] += 1\n",
+    "\n",
+    "if count_dict['6'] % 2 == 0:\n",
+    "    count_dict['6'] = count_dict['6'] // 2\n",
+    "else:\n",
+    "    count_dict['6'] = count_dict['6'] // 2 + 1\n",
+    "res = max(count_dict.values())\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
