[구현]1769번-3의배수

--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li></ul></div>"
    ]
   },
   {
@@ -432,6 +432,50 @@
     "        if matrix[i][j] > M:\n",
     "            count += 1\n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1769번 - 3의 배수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "X = sys.stdin.readline().rstrip()\n",
+    "count = 0\n",
+    "while True:\n",
+    "    if int(X) < 10:\n",
+    "        if X in ['3', '6', '9']:\n",
+    "            print(count)\n",
+    "            print('YES')\n",
+    "            break\n",
+    "        else:\n",
+    "            print(count)\n",
+    "            print('NO')\n",
+    "            break\n",
+    "    else:\n",
+    "        sum = 0\n",
+    "        for x in X:\n",
+    "            sum += int(x)\n",
+    "        count += 1\n",
+    "        if sum < 10:\n",
+    "            if sum in [3, 6, 9]:\n",
+    "                print(count)\n",
+    "                print('YES')\n",
+    "                break\n",
+    "            else:\n",
+    "                print(count)\n",
+    "                print('NO')\n",
+    "                break\n",
+    "        else:\n",
+    "            X = str(sum)"
    ]
   },
   {
