--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li><li><span><a href=\"#1913번---달팽이\" data-toc-modified-id=\"1913번---달팽이-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>1913번 - 달팽이</a></span></li></ul></div>"
    ]
   },
   {
@@ -479,6 +479,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1913번 - 달팽이"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "19\n",
+      "81 50 51 52 53 54 55 56 57\n",
+      "80 49 26 27 28 29 30 31 58\n",
+      "79 48 25 10 11 12 13 32 59\n",
+      "78 47 24 9 2 3 14 33 60\n",
+      "77 46 23 8 1 4 15 34 61\n",
+      "76 45 22 7 6 5 16 35 62\n",
+      "75 44 21 20 19 18 17 36 63\n",
+      "74 43 42 41 40 39 38 37 64\n",
+      "73 72 71 70 69 68 67 66 65\n",
+      "7 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 내가 푼 풀이\n",
+    "N = int(input())\n",
+    "n = input()\n",
+    "matrix = [[0] * N for _ in range(N)]\n",
+    "# 방향 벡터\n",
+    "vectors = [(0, -1), (1, 0), (0, 1), (-1, 0)] # 왼->아->오->위\n",
+    "vector_time = 0\n",
+    "values = [v for v in range(1, pow(N, 2)+1)]\n",
+    "values = sorted(values, reverse=True) # 내림차순 정렬\n",
+    "\n",
+    "x, y = 0, 0\n",
+    "matrix[x][y] = str(values[0])\n",
+    "values_idx = 1\n",
+    "\n",
+    "\n",
+    "def explore_vector():\n",
+    "    global vector_time\n",
+    "    vector_time += 1\n",
+    "    if vector_time == 4:\n",
+    "        vector_time = 0\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    nx = x + vectors[vector_time][0]\n",
+    "    ny = y + vectors[vector_time][1]\n",
+    "    if nx < 0 or ny < 0 or N-1 < nx or N-1 < ny or matrix[nx][ny] != 0:\n",
+    "        explore_vector()\n",
+    "    else:\n",
+    "        matrix[nx][ny] = str(values[values_idx])\n",
+    "        values_idx += 1\n",
+    "        x, y = nx, ny\n",
+    "\n",
+    "    if values_idx == len(values):\n",
+    "        break\n",
+    "\n",
+    "for m in matrix:\n",
+    "    print(' '.join(m))\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if matrix[i][j] == n:\n",
+    "            print(i+1, j+1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -503,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
