--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li><li><span><a href=\"#1913번---달팽이\" data-toc-modified-id=\"1913번---달팽이-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>1913번 - 달팽이</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li><li><span><a href=\"#1913번---달팽이\" data-toc-modified-id=\"1913번---달팽이-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>1913번 - 달팽이</a></span></li><li><span><a href=\"#2303번---숫자게임\" data-toc-modified-id=\"2303번---숫자게임-12\"><span class=\"toc-item-num\">12&nbsp;&nbsp;</span>2303번 - 숫자게임</a></span></li></ul></div>"
    ]
   },
   {
@@ -555,6 +555,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2303번 - 숫자게임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "7 5 5 4 9\n",
+      "3 5 5 2 10\n",
+      "5 5 7 4 9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "N = int(input())\n",
+    "cards = [list(map(int, input().split())) for _ in range(N)]\n",
+    "nums = [i+1 for i in range(N)] # 사람 번호\n",
+    "combs = []\n",
+    "sums = []\n",
+    "\n",
+    "for card in cards:\n",
+    "    card_combs = list(combinations(card, 3))\n",
+    "    total_max = int(str(sum(card_combs[0]))[-1])\n",
+    "    idx = 0\n",
+    "    for i in range(1, len(card_combs)):\n",
+    "        total = int(str(sum(card_combs[i]))[-1])\n",
+    "        if total_max < total:\n",
+    "            idx = i\n",
+    "            total_max = total\n",
+    "    combs.append(card_combs[idx])\n",
+    "    sums.append(total_max)\n",
+    "\n",
+    "max_sum = max(sums)\n",
+    "max_person = []\n",
+    "for i in range(N):\n",
+    "    if sums[i] == max_sum:\n",
+    "        max_person.append(nums[i])\n",
+    "print(max_person[-1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -579,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
