[구현&DFS] 2599번-짝정하기

--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -669,6 +669,7 @@
     "'''\n",
     "겹치는 부분을 제외하기 위해서 겹칠 때마다 굳이 +1할 필요 없다!!!\n",
     "해당 문제에서는 좌표가 0,0부터 시작이기 때문에 input 좌표를 굳이 1빼줄 필요없음!!!\n",
+    "또, array의 한 요소값 = 하나의 색종이 조각 -> 으로 생각해서 넓이가 10이면 range(0, 10)이가 됨!!\n",
     "'''\n",
     "N = int(sys.stdin.readline())\n",
     "matrix = [[0]*100 for _ in range(100)]\n",
