SelectiveSearch for bounding_box visualization

--- a/pyspark/Recommendation/movie_recommender.ipynb
+++ b/pyspark/Recommendation/movie_recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "2      22  Three Colors: Red     5.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "4      29  Three Colors: Red     3.0        6.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,20 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function JavaWrapper.__del__ at 0x7fadb20aa830>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/Cellar/apache-spark/3.0.1/libexec/python/pyspark/ml/wrapper.py\", line 42, in __del__\n",
-      "    if SparkContext._active_spark_context and self._java_obj is not None:\n",
-      "AttributeError: 'ALS' object has no attribute '_java_obj'\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -348,19 +337,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1829</td>\n",
+       "      <td>1645</td>\n",
        "      <td>Yesterday</td>\n",
        "      <td>2.5</td>\n",
        "      <td>148.0</td>\n",
-       "      <td>2.160393</td>\n",
+       "      <td>1.930827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6466</td>\n",
+       "      <td>13840</td>\n",
        "      <td>Yesterday</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>148.0</td>\n",
-       "      <td>3.411708</td>\n",
+       "      <td>3.413589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -368,23 +357,23 @@
        "      <td>Yesterday</td>\n",
        "      <td>3.0</td>\n",
        "      <td>148.0</td>\n",
-       "      <td>3.053997</td>\n",
+       "      <td>2.890002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>23364</td>\n",
-       "      <td>Yesterday</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>3.635531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>25591</td>\n",
        "      <td>Yesterday</td>\n",
        "      <td>5.0</td>\n",
        "      <td>148.0</td>\n",
-       "      <td>2.422732</td>\n",
+       "      <td>3.767103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40011</td>\n",
+       "      <td>Yesterday</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>4.559514</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,14 +381,14 @@
       ],
       "text/plain": [
        "   userId      title  rating  title_new  prediction\n",
-       "0    1829  Yesterday     2.5      148.0    2.160393\n",
-       "1    6466  Yesterday     4.5      148.0    3.411708\n",
-       "2   15447  Yesterday     3.0      148.0    3.053997\n",
-       "3   23364  Yesterday     4.0      148.0    3.635531\n",
-       "4   25591  Yesterday     5.0      148.0    2.422732"
+       "0    1645  Yesterday     2.5      148.0    1.930827\n",
+       "1   13840  Yesterday     4.0      148.0    3.413589\n",
+       "2   15447  Yesterday     3.0      148.0    2.890002\n",
+       "3   25591  Yesterday     5.0      148.0    3.767103\n",
+       "4   40011  Yesterday     3.0      148.0    4.559514"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,14 +415,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.9037694696632295\n"
+      "RMSE: 0.902454828234274\n",
+      "MAE: 0.6868150653142723\n"
      ]
     }
    ],
@@ -446,27 +436,12 @@
     "                               metricName='rmse')\n",
     "# evaluate 메소드에 예측값 담겨있는 dataframe 넣어주기\n",
     "rmse = evaluator.evaluate(pred_ratings)\n",
-    "print(\"RMSE:\", rmse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE: 0.6877014610850091\n"
-     ]
-    }
-   ],
-   "source": [
     "mae_eval = RegressionEvaluator(labelCol='rating',\n",
     "                              predictionCol='prediction',\n",
     "                              metricName='mae')\n",
     "mae = mae_eval.evaluate(pred_ratings)\n",
+    "\n",
+    "print(\"RMSE:\", rmse)\n",
     "print(\"MAE:\", mae)"
    ]
   },
@@ -487,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,29 +576,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+------+----------+------------------------------+\n",
-      "|title_new|userId|prediction|title                         |\n",
-      "+---------+------+----------+------------------------------+\n",
-      "|6725.0   |1829  |17.840975 |Some Kind of a Nut            |\n",
-      "|6852.0   |1829  |15.735489 |Way Beyond Weight             |\n",
-      "|6227.0   |1829  |12.143332 |Exterminators of the Year 3000|\n",
-      "|5821.0   |1829  |10.902253 |Insidious: Chapter 2          |\n",
-      "|6016.0   |1829  |10.588577 |I Can Do Bad All By Myself    |\n",
-      "+---------+------+----------+------------------------------+\n",
+      "+---------+------+----------+--------------------------------+\n",
+      "|title_new|userId|prediction|title                           |\n",
+      "+---------+------+----------+--------------------------------+\n",
+      "|6616.0   |1817  |19.360832 |Just Friends?                   |\n",
+      "|5600.0   |1817  |8.937171  |Wither                          |\n",
+      "|6028.0   |1817  |8.811199  |Kind Lady                       |\n",
+      "|6492.0   |1817  |6.6330175 |Andrew Dice Clay: Indestructible|\n",
+      "|5721.0   |1817  |6.531088  |The Legend of Suram Fortress    |\n",
+      "+---------+------+----------+--------------------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "top_movies(1829, 5)"
+    "top_movies(1817, 5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
